[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "tesseract-clickhouse"
version = "0.1.0"

[dependencies]
clickhouse-rs = "0.1.18"
failure = "0.1.2"
futures = "0.1.25"
itertools = "0.8.0"
log = "0.4.3"

[dependencies.tesseract-core]
path = "../tesseract-core"

[dev-dependencies]
tokio = "0.1.22"