[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "tesseract-clickhouse"
version = "0.1.0"

[dependencies]
async-trait = "0.1.42"
clickhouse-rs = "1.0.0-alpha.1"
anyhow = "1"
futures = "0.3.13"
itertools = "0.10.0"
log = "0.4.3"
regex = "1"

[dependencies.tesseract-core]
path = "../tesseract-core"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
