[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "tesseract-core"
version = "0.1.0"

[dependencies]
csv = "1.0.2"
failure = "0.1.3"
futures = "0.1.25"
itertools = "0.7.11"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.33"
serde-xml-rs = "0.2.1"

[dependencies.indexmap]
features = ["serde-1"]
version = "1.0.2"
