[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "tesseract-core"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bytes = "0.4.12"
csv = "1.0.2"
futures = "0.3.13"
itertools = "0.7.11"
log = "0.4.3"
serde = "1.0.71"
serde-xml-rs = "0.3.1"
serde_derive = "1.0.71"

[dependencies.indexmap]
features = ["serde-1"]
version = "1.0.2"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.33"
