[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
name = "tesseract-engine"
version = "0.1.0"

[dependencies]
csv = "1.0.0"
failure = "0.1.2"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.24"
xxhash2 = "0.1.0"

[dependencies.indexmap]
features = ["serde-1"]
version = "1.0.1"
