[package]
authors = ["Jonathan Speiser <jspeis@gmail.com>"]
edition = "2018"
name = "tesseract-mysql"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
mysql_async = "0.27.1"
log = "0.4.3"

[dependencies.tesseract-core]
path = "../tesseract-core"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
