[package]
authors = ["Jonathan Speiser <jspeis@gmail.com>"]
edition = "2018"
name = "tesseract-postgres"
version = "0.1.0"

[dependencies]
tokio-postgres = "0.4.0-rc.3"
failure = "0.1.2"
futures = "0.1.25"
log = "0.4.3"
tokio-core = "*"
tokio = "0.1"
bb8 = "0.3"
bb8-postgres = "0.3"
futures-state-stream = "0.2"

[dependencies.tesseract-core]
path = "../tesseract-core"
