[package]
authors = ["Jonathan Speiser <jspeis@gmail.com>"]
edition = "2018"
name = "tesseract-postgres"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bb8 = "0.7.0"
bb8-postgres = "0.7.0"
log = "0.4.3"
tokio = { version = "1.0", features = ["rt"] }
tokio-postgres = "0.7.0"

[dependencies.tesseract-core]
path = "../tesseract-core"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
