[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "tesseract"
version = "0.7.0"

[dependencies]
actix = "0.7.7"
actix-web = "0.7.18"
clickhouse-rs = "0.1.1"
dotenv = "0.13.0"
failure = "0.1.2"
futures = "0.1.25"
lazy_static = "1.2.0"
log = "0.4.3"
pretty_env_logger = "0.2.4"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_qs = "0.4.1"
structopt = "0.2.13"

[dependencies.tesseract-clickhouse]
path = "../tesseract-clickhouse"

[dependencies.tesseract-mysql]
path = "../tesseract-mysql"

[dependencies.tesseract-postgres]
path = "../tesseract-postgres"

[dependencies.tesseract-core]
path = "../tesseract-core"
