[package]
authors = [ "Walther Chen <walther.chen@gmail.com>",]
description = "ROLAP engine for web applications, in Rust"
license = "MIT"
readme = "README.md"
edition = "2018"
name = "tesseract-olap"
version = "0.14.13"

[package.metadata.deb]
maintainer = "Walther Chen <walther.chen@gmail.com>"
extended-description = "Olap engine for serving web applications"
depends = "$auto"
section = "Web Servers"
priority = "optional"
assets = [ [ "../target/release/tesseract-olap", "usr/bin/", "755",], [ "pkg/deb/tesseract-olap.service", "/etc/systemd/system/tesseract-olap.service", "644",],]
maintainer-scripts = "pkg/deb/maintainer-scripts"

[dependencies]
anyhow = "1"
dotenv = "0.13.0"
lazy_static = "1.2.0"
log = "0.4.3"
pretty_env_logger = "0.2.4"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.33"
serde_qs = "0.4.1"
structopt = "0.2.13"
thiserror = "1"
mime = "0.3.13"
url = "2.1.0"
jsonwebtoken = "7"
r2d2_redis = "0.13.0"
futures = "0.3.13"

[dependencies.actix-web]
version = "4.0.0-beta.3"
features = [ "rustls",]

[dependencies.tesseract-clickhouse]
path = "../tesseract-clickhouse"

[dependencies.tesseract-mysql]
path = "../tesseract-mysql"

[dependencies.tesseract-postgres]
path = "../tesseract-postgres"

[dependencies.tesseract-core]
path = "../tesseract-core"
